Added a DEVELOPMENT readme aimed at windows beta testers Used new readme to get windows build/run up and running